src/test/resources/extension/invalid/typeInference/ungroundType.awsl
begin

var x = [];  # unable to infer a ground type for any array.

end